force-app/main/default/objects/Account/fields/Bank_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_ID__c</fullName>
    <label>Bank Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>