force-app/main/default/objects/Account/fields/Ifirma_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Ifirma_Company_ID__c</fullName>
    <label>Ifirma Company ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>