force-app/main/default/objects/Account/fields/Vat_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Vat_Percentage__c</fullName>
    <label>Vat Percentage</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>